[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "pdf2image>=1.17.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "uv>=0.9.28",
]
